bpo-39307: Fix memory leak on error path in parsetok (GH-17953)